# AI-LANGCHAIN-BASICS

./: .env.example  .gitignore  NOTES.md  PROJECTS.md  README.md  SYLLABUS.md  pyproject.toml  requirements.txt
01-basics/: README.md  pyproject.toml
01-basics/learning/: 1-intro.ipynb  10-middleware.ipynb  2-integrate-models.ipynb  3-message-struct.ipynb  4-tools.ipynb  5-messages.ipynb  6-structured-output.ipynb  7-structured-output.ipynb  8-structured-output.ipynb  9-middleware.ipynb
01-basics/notebooks/: 01-create-agent.ipynb  02-chat-models.ipynb  03-streaming-and-batch.ipynb  04-tools.ipynb  05-messages.ipynb  06-structured-output-pydantic.ipynb  07-structured-output-typeddict.ipynb  08-structured-output-agent.ipynb  09-middleware-summarization.ipynb  10-middleware-human-in-the-loop.ipynb
02-agents/: README.md  client.py  mathserver.py  pyproject.toml  requirements.txt  weatherserver.py
02-agents/1-BasicChatbot/: 1-basicchatbot.ipynb  2-humanintheloop.ipynb
02-agents/mcp/: client.py  math_server.py  weather_server.py
02-agents/notebooks/: 01-basic-chatbot.ipynb  02-human-in-the-loop.ipynb
03-traditional-rag/: NOTES.md  README.md
03-traditional-rag/data/db/: company.db
03-traditional-rag/data/excel_files/: products.xlsx
03-traditional-rag/notebooks/: 01-document-loaders.ipynb  02-rag-pipeline.ipynb
docs/: PROJECTS.md  PYTHON-SYLLABUS.md  SYLLABUS.md
