[project]
name = "ai-langchain-basics"
version = "0.1.0"
description = "Learning notebooks for LangChain v1 and LangGraph"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # notebook kernel
    "ipykernel>=7.3.0",
    # core
    "langchain>=1.3.7",
    "langgraph>=1.2.4",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.2",
    # model provider used by the examples (local Ollama)
    "langchain-ollama>=1.1.0",
    # tools / MCP
    "langchain-tavily>=0.2.18",
    "langchain-mcp-adapters>=0.3.0",
    "mcp>=1.27.2",
    # traditional RAG (03-traditional-rag): loaders, splitters, embeddings, vector stores
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=1.1.2",
    "sentence-transformers>=5.5.1",
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "pypdf>=6.13.2",
    "pymupdf>=1.27.2.3",
    "pandas>=3.0.3",
    "openpyxl>=3.1.5",
]
